<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/info"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="#FFC4D0"
        android:title="@string/info"/>

    <item
        android:id="@+id/note"
        android:icon="@drawable/baseline_note_alt_24"
        android:title="@string/catat"
        android:iconTint="#FFC4D0"
        />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profil"
        android:iconTint="#FFC4D0"
        />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="Logout"
        android:iconTint="#FFC4D0"
        />
</menu>