<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileFragment">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#E4BDCA"
        android:text=" "
        android:textSize="40dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:id="@+id/foto"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:src="@drawable/me" />-->



            android:textStyle="bold" />

        <ImageView
            android:id="@+id/foto"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:src="@drawable/me"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/txt_nim"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginTop="5dp"
            android:elevation="12dp"
            android:layout_below="@id/txt_nama"
            android:text="@string/nim"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/foto"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:elevation="12dp"
            android:padding="20dp"
            android:text="@string/nama"
            android:textSize="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_kelas"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginTop="5dp"
            android:elevation="12dp"
            android:layout_below="@id/txt_nim"
            android:text="@string/kelas"
            android:textSize="10dp"
            android:textColor="@color/black"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginTop="5dp"
            android:elevation="12dp"
            android:text="silvyani.10120172@mahasiswa.unikom.ac.id"
            android:textSize="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>

</RelativeLayout>